[css] small spacing corrections

--- a/dev/css/templates/_about.scss
+++ b/dev/css/templates/_about.scss
@@ -19,10 +19,13 @@
         padding-bottom: 0;
     }
 
+    .showreel__video {
+        margin-bottom: 4vw;
+    }
+
     .section__main {
         background: var(--color-bg-darkgray);
         color: var(--color-white);
-        margin-top: 4vw;
     }
 
     .footer .large__quote {
