--- a/dev/css/templates/_footer.scss
+++ b/dev/css/templates/_footer.scss
@@ -56,8 +56,7 @@
         position: relative;
         left: -0.08em;
         bottom: 0;
-
-        font-size: 2.375em;
+        font-size: 2.52em;
         letter-spacing: -0.06em;
         line-height: 1em;
         font-weight: 700;
@@ -87,7 +86,7 @@
         }
 
         .footer__branding span {
-            font-size: 3.64em;
+            font-size: 3.78em;
         }
     }
 }
