--- a/dev/css/templates/_projects-showcase.scss
+++ b/dev/css/templates/_projects-showcase.scss
@@ -98,6 +98,11 @@
 // --------------------------------------------------------------------------- //
 // SHOWREEL
 // --------------------------------------------------------------------------- //
+.showreel {
+    width: 100vw;
+    overflow: hidden;
+}
+
 .showreel__video {
     width: 92%;
     min-height: 9em;
